--- a/src/main/resources/templates/systemmanagement/user_management.html
+++ b/src/main/resources/templates/systemmanagement/user_management.html
@@ -289,7 +289,7 @@
             }else{
                 if (usernameCode.test(a.value) || passwordCode.test(a.value) || userEmailCode.test(a.value) || userPhoneCode.test(a.value)) {
                     $.ajax({
-                        url:'',
+                        url:'findAllProperty',
                         type:'post',
                         dataType:'json',
                         async:false,
