--- a/src/main/resources/templates/systemmanagement/system_parameter.html
+++ b/src/main/resources/templates/systemmanagement/system_parameter.html
@@ -2,13 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>系统参数配置</title>
+    <link rel="stylesheet" href="layui/css/layui.css">
+    <script src="layui/layui.js"></script>
+    <script src="js/jQuery/jquery-2.2.3.min.js"></script>
 </head>
 <body>
 <div>
-    <h1>
-        这里是系统参数配置
-    </h1>
+    <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
+        <legend>系统参数配置</legend>
+    </fieldset>
+
+    <table class="layui-table" lay-even="" lay-skin="nob">
+        <colgroup>
+            <col width="150">
+            <col width="150">
+            <col width="200">
+            <col>
+        </colgroup>
+        <thead>
+        <tr>
+            <th>服务器操作系统</th>
+            <th>WINDOWS</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>运行环境</td>
+            <td>Microsoft-IIS/8.0</td>
+        </tr>
+        <tr>
+            <td>主机名</td>
+            <td>MACHENIKE-SBT001</td>
+        </tr>
+        <tr>
+            <td>Web服务端口</td>
+            <td>http://localhost:80</td>
+        </tr>
+        <tr>
+            <td>浏览器信息</td>
+            <td>Mozilla/5.0(Windows NT 5.0)AppleWebKit</td>
+        </tr>
+        <tr>
+            <td>通信协议</td>
+            <td>HTTP/1.1</td>
+        </tr>
+        <tr>
+            <td>请求方法</td>
+            <td>POST</td>
+        </tr>
+        <tr>
+            <td>开发环境版本</td>
+            <td>Jdk 1.8</td>
+        </tr>
+        <tr>
+            <td>系统版本</td>
+            <td>Version/1.0</td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 </body>
 </html>
